# sqlclix

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  release-plz.toml
.github/workflows/: build.yml  release-plz.yml  rust.yml
src/: app.rs  db.rs  events.rs  highlight.rs  main.rs  state.rs
src/ui/: editor.rs  help.rs  layout.rs  mod.rs  results.rs  sidebar.rs
