[package]
name = "sqlitex"
version = "0.1.0"
edition = "2024"
description = "A polished SQLite database browser with TUI interface"
authors = ["Mustakim"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
