[package]
name = "sqlclix"
version = "0.2.0"
edition = "2024"
description = "A SQL database browser with TUI interface (SQLite & PostgreSQL)"
authors = ["Mustakim"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
unicode-width = "0.2"
serde_json = "1.0"
dirs = "6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
