[package]
name = "sqlclix"
version = "0.1.2"
edition = "2024"
description = "A SQL database browser with TUI interface (SQLite & PostgreSQL)"
authors = ["M Mustakim Ali <i@mustak.im>"]
license = "MIT"
repository = "https://github.com/mustakimali/sqlclix"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
unicode-width = "0.2"
serde_json = "1.0"
chrono = "0.4"
dirs = "6.0"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
